<resources>
    <string name="app_name">GeneratorGraph</string>
    <string name="home">Home</string>
    <string name="navigation_up">navigation_up</string>
    <string name="a">a=</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_us">contact_us</string>
    <string name="setting">setting</string>
    <string name="more_apps">more apps</string>
    <string name="about_us">about us</string>
    <string name="about__us">about_us</string>
    <string name="Home">Home</string>
    <string name="draw">Draw</string>
    <string name="x">X² +</string>
    <string name="xx">X +</string>
    <string name="clear">clear</string>
    <string name="switch_mode">switch mode</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="next">next</string>
    <string name="GeneratorGraph">GRAPH GENERATOR</string>
    <string name="gmailm">fadlimohamed155@gmail.com</string>
    <string name="gmailderi">abdelellahissile1821@gmail.com</string>
    <string name="copy">copy</string>
</resources>