<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cantact_us">

    <TextView
        android:id="@+id/gmailderi"
        android:layout_width="322dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:text="@string/gmailm"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/copy2"
        app:layout_constraintTop_toBottomOf="@+id/gmailm" />

    <TextView
        android:id="@+id/gmailm"
        android:layout_width="323dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="83dp"
        android:layout_marginBottom="28dp"
        android:text="@string/gmailderi"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/gmailderi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/copy1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/copy1"
        android:layout_width="75dp"
        android:layout_height="36dp"
        android:background="#4F74E3"
        android:backgroundTint="@color/white"
        android:text="@string/copy"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/copy2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/copy2"
        android:layout_width="75dp"
        android:layout_height="36dp"
        android:background="#4F74E3"
        android:backgroundTint="@color/white"
        android:text="@string/copy"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>